Correctly right-aligned tabs in tablet stylesheet

--- a/css/sizes/tablet.less
+++ b/css/sizes/tablet.less
@@ -189,7 +189,7 @@ h1 { font-size: 1.5em; line-height: 125%; }
 header.tab-container {
 	h1 { margin-bottom: 0; line-height: 100%; padding: 0; }
 	.tabs {
-		float: right; position: absolute; bottom: 0.5em; right: 0;
+		float: right; position: absolute; bottom: 0.5em; right: 0; margin-right: 0;
 	}
 }
 
